sorta got some django stuff working

--- a/django/cafe_au_lait/templates/index.html
+++ b/django/cafe_au_lait/templates/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>Cafe au Lait</title>
 		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="/static/style/style.css" />
+		<link rel="stylesheet" type="text/css" href="/static/style.css" />
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 		<script type="text/javascript" src="https://raw.github.com/douglascrockford/JSON-js/master/json2.js"></script>
-		<script type="text/javascript" src="/static/style/scripts.js"></script>
+		<script type="text/javascript" src="/static/scripts.js"></script>
 		<meta name="viewport" content="width=480px, user-scalable=no" />
 	</head>
 	<body>
