XHR request now gets sent and recieved successfully

--- a/django/cafe_au_lait/templates/index.html
+++ b/django/cafe_au_lait/templates/index.html
@@ -28,13 +28,13 @@
 					</ul>
 					<form id="order">
 						<ul id="dinein">
-							<li><label for="d_cappuccino">Cappuccino</label><input id="d_cappuccino" name="d_cappuccino" type="number" /></li>
+							<li><label for="d_cappucino">Cappuccino</label><input id="d_cappucino" name="d_cappucino" type="number" /></li>
 							<li><label for="d_latte">Latte</label><input id="d_latte" name="d_latte" type="number" /></li>
 							<li><label for="d_iced">Iced</label><input id="d_iced" name="d_iced" type="number" /></li>
 							<li><label for="d_espresso">Espresso</label><input id="d_espresso" name="d_espresso" type="number" /></li>
 						</ul>
 						<ul id="takeaway">
-							<li><label for="t_cappuccino">Cappuccino</label><input id="t_cappuccino" name="t_cappuccino" type="number" /></li>
+							<li><label for="t_cappucino">Cappuccino</label><input id="t_cappucino" name="t_cappucino" type="number" /></li>
 							<li><label for="t_latte">Latte</label><input id="t_latte" name="t_latte" type="number" /></li>
 							<li><label for="t_iced">Iced</label><input id="t_iced" name="t_iced" type="number" /></li>
 							<li><label for="t_espresso">Espresso</label><input id="t_espresso" name="t_espresso" type="number" /></li>
