--- a/django/cafe_au_lait/templates/index.html
+++ b/django/cafe_au_lait/templates/index.html
@@ -4,8 +4,8 @@
 		<title>Cafe au Lait</title>
 		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="/static/style.css" />
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-		<script type="text/javascript" src="https://raw.github.com/douglascrockford/JSON-js/master/json2.js"></script>
+		<script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>
+		<script type="text/javascript" src="/static/js/includes.js"></script>
 		<script type="text/javascript" src="/static/scripts.js"></script>
 		<meta name="viewport" content="width=480px, user-scalable=no" />
 	</head>
@@ -26,25 +26,45 @@
 						<li><a href="#" id="t_dinein">Dine In</a></li>
 						<li><a href="#" id="t_takeaway">Take Away</a></li>
 					</ul>
-					<form id="order">
-						<ul id="dinein">
-							<li><label for="d_cappucino">Cappuccino</label><input id="d_cappucino" name="d_cappucino" type="number" /></li>
-							<li><label for="d_latte">Latte</label><input id="d_latte" name="d_latte" type="number" /></li>
-							<li><label for="d_iced">Iced</label><input id="d_iced" name="d_iced" type="number" /></li>
-							<li><label for="d_espresso">Espresso</label><input id="d_espresso" name="d_espresso" type="number" /></li>
-						</ul>
-						<ul id="takeaway">
-							<li><label for="t_cappucino">Cappuccino</label><input id="t_cappucino" name="t_cappucino" type="number" /></li>
-							<li><label for="t_latte">Latte</label><input id="t_latte" name="t_latte" type="number" /></li>
-							<li><label for="t_iced">Iced</label><input id="t_iced" name="t_iced" type="number" /></li>
-							<li><label for="t_espresso">Espresso</label><input id="t_espresso" name="t_espresso" type="number" /></li>
-						</ul>
-						<li><a href="#" id="place_order">Place Order</a></li>
-					</form>
+					<form id="order"></form>
+					<li><a href="#" id="place_order">Place Order</a></li>
 				</ul>
 			</div>
 			<div id="p_current_orders" class="page">
-				<h3>p_current_orders</h3>
+				<div id="order_25113">
+					<h3>Table #12</h3>
+					<a href="#">x</a>
+					<h4>17 minutes ago</h4>
+					<table><tbody>
+						<tr>
+							<td>Cappacino</td>
+							<td>D</td>
+							<td>12</td>
+						</tr>
+						<tr>
+							<td>Latte</td>
+							<td>T</td>
+							<td>6</td>
+						</tr>
+					</tbody></table>
+				</div>
+				<div id="order_25173">
+					<h3>Table #6</h3>
+					<a href="#">x</a>
+					<h4>3 hours ago</h4>
+					<table><tbody>
+						<tr>
+							<td>Iced</td>
+							<td>D</td>
+							<td>9</td>
+						</tr>
+						<tr>
+							<td>Espresso</td>
+							<td>D</td>
+							<td>2</td>
+						</tr>
+					</tbody></table>
+				</div>
 			</div>
 			<div id="p_history" class="page">
 				<h3>p_history</h3>
