--- a/django/cafe_au_lait/templates/static/style.css
+++ b/django/cafe_au_lait/templates/static/style.css
@@ -85,6 +85,9 @@
 		#wrap a#place_order{
 			background:#690202;
 		}
+		#takeaway {
+			display: none;
+		}
 	/*Current Orders*/
 		#p_current_orders>div{
 			background:#2a2a2a;
