js now XHR POSTs when order cleared

--- a/html/style/style.css
+++ b/html/style/style.css
@@ -6,6 +6,7 @@
 	font-size:1em;
 	color:#000;
 	text-decoration:none;
+	text-shadow:1px 0 0 rgba(255, 255, 255, 0.01);
 }
 /*clearfix*/
 	.clearfix:after {content: ".";display: block;clear: both;visibility: hidden;line-height: 0;height: 0;}
